fix,color contrast action bar

--- a/css/light.css
+++ b/css/light.css
@@ -7,8 +7,8 @@ body {
 }
 
 .navigationBar {  filter: brightness(0.9); box-shadow: 0 1px 5px #071c1a;}
-.userB {  filter: brightness(0.9); box-shadow: 0 1px 10px #071c1a;}
-.accessB {  filter: brightness(0.9); box-shadow: 0 1px 10px #071c1a;}
+.userB { filter: brightness(0.8); box-shadow: 0 1px 10px #071c1a; background-color: rgba(255, 255, 255, 0.2)!important;}
+.accessB { filter: brightness(0.8); background-color: rgba(255, 255, 255, 0.1)!important; box-shadow: 0 1px 10px #071c1a;}
 
 
 .lightDarkB {  border: none;
